fix bag with form control in table on iphone

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -501,7 +501,8 @@ div
 					overflow: hidden
 
 					&.editing_style
-						z-index: 2000 !important
+						z-index: 200 !important
+						overflow: visible !important
 					
 					p
 						display: inline-block
